--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color = "mycolor">
     <ion-title>customers</ion-title>
   </ion-toolbar>
 </ion-header>
