--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -5,9 +5,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">customers</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <ion-button (click)="goToHome()">Go to Home</ion-button>
 </ion-content>
