Navigating to different routes

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,9 +5,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
+
+      <!-- Opción 1: Usando [routerLink] -->
+      <ion-button [routerLink]="['/customers']">Go to customers</ion-button>
+
+      <!-- Opción 2: Usando (click) -->
+      <!-- <ion-button (click)="goToCustomers()">Go to customers</ion-button> -->
       
-    </ion-toolbar>
-  </ion-header>
 </ion-content>
