--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -1,9 +1,19 @@
+
+
+
 <ion-header [translucent]="true">
-  <ion-toolbar color = "mycolor">
-    <ion-title>customers</ion-title>
+  <ion-toolbar color="mycolor">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+
+    <ion-title>Customers</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-      <ion-button (click)="goToHome()">Go to Home</ion-button>
+  <!-- Contenido de la página -->
+
+  <!-- Botón para ir a Home -->
+  <ion-button (click)="goToHome()" class="btn">Go to Home</ion-button>
 </ion-content>
