--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -13,7 +13,8 @@
 
 <ion-content [fullscreen]="true">
   <!-- Contenido de la página -->
-
+  <div id="container">
   <!-- Botón para ir a Home -->
   <ion-button (click)="goToHome()" class="btn">Go to Home</ion-button>
+</div>
 </ion-content>
