--- a/src/app/customers/customers.page.scss
+++ b/src/app/customers/customers.page.scss
@@ -3,8 +3,17 @@ ion-toolbar{
 }
 
 ion-button.btn {
-    --background: var(--ion-color-mycolor-shade);
+ --background: var(--ion-color-mycolor-shade);
     padding: 20px 30px 20px 30px;
     border-radius: 10px;
     font-size: 20px;
-    }
+}
+
+#container {
+    text-align: center;
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
