--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,8 +5,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div id="container">
       <!-- Opción 1: Usando [routerLink] -->
       <ion-button [routerLink]="['/customers']" class="btn">Go to customers</ion-button>
       <!-- Opción 2: Usando (click) -->
       <!-- <ion-button (click)="goToCustomers()">Go to customers</ion-button> --> 
+</div>
 </ion-content>
