--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -13,6 +13,25 @@
 
 <ion-content [fullscreen]="true">
   <!-- Contenido de la página -->
+    <!-- Lista de elementos -->
+    <ion-list>
+      <ion-item>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Mega Man X</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Pac-Man</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Super Mario World</ion-label>
+      </ion-item>
+    </ion-list>
+    
   <div id="container">
   <!-- Botón para ir a Home -->
   <ion-button (click)="goToHome()" class="btn">Go to Home</ion-button>
