--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -9,8 +9,6 @@ ion-button.btn {
     font-size: 20px;
 }
 
-
-
 #container {
   text-align: center;
   position: absolute;
@@ -18,4 +16,13 @@ ion-button.btn {
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
+}
+.custom-orange-grid {
+  --ion-background-color: #FFA500; /* Fondo del grid */
+  color: white; /* Color del texto dentro del grid */
+}
+
+.custom-orange-card {
+  --ion-background-color: #FFA500; /* Fondo de las tarjetas dentro del grid */
+  color: white; /* Color del texto dentro de las tarjetas */
 }
