--- a/src/app/userslist/userslist.page.html
+++ b/src/app/userslist/userslist.page.html
@@ -1,18 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="mycolor">
     <ion-title>Users</ion-title>
-
-    
       <ion-buttons slot="start">
         <ion-back-button defaultHref="/home"></ion-back-button>
       </ion-buttons>
-    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item *ngFor="let character of characters">
+    <ion-item *ngFor="let character of characters" [routerLink]="['/home']">
+      <ion-avatar slot="start">
+        <img src="{{character.image}}">
+      </ion-avatar>
       <ion-label>{{character.name}}</ion-label>
     </ion-item>
   </ion-list>
