--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -1,4 +1,5 @@
 <ion-content>
+  <!-- HEADER -->
   <div class="header">
     <h1>Menu</h1>
     <div class="avatar">
@@ -6,4 +7,6 @@
         <img src="assets\images\avatar.svg"></ion-avatar>
     </div>
   </div>
+  <!-- SEARCHBAR -->
+  <app-searchbar></app-searchbar>
 </ion-content>
