components searchbar scss

--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -9,4 +9,8 @@
   </div>
   <!-- SEARCHBAR -->
   <app-searchbar></app-searchbar>
+  <!-- CATEGORY -->
+<div class="categories">
+  
+</div>
 </ion-content>
