--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -11,6 +11,7 @@
   <app-searchbar></app-searchbar>
   <!-- CATEGORY -->
 <div class="categories">
-  
+  <app-category-item></app-category-item>
+
 </div>
 </ion-content>
