--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -9,9 +9,10 @@
   </div>
   <!-- SEARCHBAR -->
   <app-searchbar></app-searchbar>
+  
   <!-- CATEGORY -->
 <div class="categories">
-  <app-category-item></app-category-item>
+  <app-category-item *ngFor="let item of categories" [item]="item" ></app-category-item>
 
 </div>
 </ion-content>
