--- a/src/app/listing/listing.page.scss
+++ b/src/app/listing/listing.page.scss
@@ -32,6 +32,11 @@ ion-content {
     }
 }
 }
+.categories {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+}
 }
    
     
