--- a/src/app/components/categoty-item/categoty-item.component.html
+++ b/src/app/components/categoty-item/categoty-item.component.html
@@ -1,3 +1,7 @@
-<p>
-  categoty-item works!
-</p>
+<div class="wrapper" [ngClass]="{ 'active-class': item.active }">
+  <div class="image-card">
+    <ion-img [src]="item.image"></ion-img>
+  </div>
+
+  <p class="ion-no-margin">{{ item.label }}</p>
+</div>
