--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -13,6 +13,9 @@
   <!-- CATEGORY -->
 <div class="categories">
   <app-category-item *ngFor="let item of categories" [item]="item"></app-category-item>
+<!-- PRODUCT -->
+<h1 class="list-header">Popular</h1>
+<div class="food-list"></div>
 
 </div>
 </ion-content>
