--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -15,7 +15,7 @@
   <app-category-item *ngFor="let item of categories" [item]="item"></app-category-item>
 <!-- PRODUCT -->
 <h1 class="list-header">Popular</h1>
-<div class="food-list"></div>
-
+<div class="food-list" *ngFor="let food of foods"></div>
+<app-food-card></app-food-card>
 </div>
 </ion-content>
