--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -16,6 +16,6 @@
 <!-- PRODUCT -->
 <h1 class="list-header">Popular</h1>
 <div class="food-list" *ngFor="let food of foods"></div>
-<app-food-card></app-food-card>
+<app-food-card [item]="food"></app-food-card>
 </div>
 </ion-content>
