--- a/src/app/components/food-card/food-card.component.html
+++ b/src/app/components/food-card/food-card.component.html
@@ -1,4 +1,13 @@
 <div class="card">
   <ion-img [src]="item.image"></ion-img>
+  <div class="card-content"></div>
+  <h3 class="title">{{item.title}}</h3>
+  <h2 class="subtitle"><sup>$</sup>{{item.price|number:'1.2'}}</h2>
+
+<ion-buttons>
+  <ion-button>
+    <ion-icon slot="icon-only" name="add"></ion-icon>
+  </ion-button>
+</ion-buttons>
 </div>
 
