--- a/src/app/components/food-card/food-card.component.scss
+++ b/src/app/components/food-card/food-card.component.scss
@@ -13,11 +13,11 @@
     text-align: center;
 
     .title {
-    font-weight: 700,
+    font-weight: 700;
     font-size: 1.1rem;
     margin-bottom: 0.2rem;
     color: #1d1d1d;
-}
+    }
 
     .substitle {
         font-size: 1.3rem;
