--- a/src/app/components/food-card/food-card.component.scss
+++ b/src/app/components/food-card/food-card.component.scss
@@ -19,11 +19,37 @@
     color: #1d1d1d;
     }
 
-    .substitle {
+    .subtitle {
         font-size: 1.3rem;
         font-weight: 700;
         color: #ffb800;
         margin-top: 0;
+
+        sup{
+            font-size: 1rem;
+            margin-right: 2px;
+        }
     }
+
+    ion-buttons {
+        position: absolute;
+        bottom: -1rem;
+        left: 50%;
+        transform: translateX(-50%);
+   
+
+    ion-buttons {
+        --background:#1d1d1d;
+        font-weight: 700;
+        color:#fff;
+        width: 40px;
+        height: 40px;
+
+        --padding-start: 0;
+        --padding-end:0;
+        --padding-top: 0;
+        --padding-bottom: 0;
+    }
+}
 }
 }
