--- a/src/app/listing/listing.page.scss
+++ b/src/app/listing/listing.page.scss
@@ -45,7 +45,7 @@ ion-content {
     margin-top: 2.5rem;
 }
 .food-list{
-    display: Grid;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
 }
