--- a/src/app/listing/listing.page.html
+++ b/src/app/listing/listing.page.html
@@ -13,10 +13,10 @@
   <!-- CATEGORY -->
 <div class="categories">
   <app-category-item *ngFor="let item of categories" [item]="item"></app-category-item>
-  
+
 <!-- PRODUCT -->
 <h1 class="list-header">Popular</h1>
-<div class="food-list" *ngFor="let food of foods">
-  <app-food-card [item]="food"></app-food-card></div>
+<div class="food-list" >
+  <app-food-card *ngFor="let food of foods" [item]="food"></app-food-card></div>
 </div>
 </ion-content>
