--- a/src/app/components/food-card/food-card.component.scss
+++ b/src/app/components/food-card/food-card.component.scss
@@ -38,7 +38,7 @@
         transform: translateX(-50%);
 
         ion-button {
-            --background: #1d1d1d;
+            --background: #4f093b;
             font-weight: 700;
             color: #fff;
             width: 40px;
